<resources>
    <string name="app_name">Lacrosse Stat Tracker</string>
    <string name="get_started">Get Started</string>
    <string name="title">Lacrosse Stat\nTracker</string>
    <string name="teams">Teams</string>
    <string name="players">Players</string>
    <string name="add_team">Add Team</string>
    <string name="add_player">Add Player</string>
    <string name="goals">Goals</string>
    <string name="ground_balls">Ground Balls</string>
    <string name="assists">Assists</string>
    <string name="saves">Saves</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="number">Number:</string>
    <string name="team_name">Team Name</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="must_enter">MUST ENTER A NAME</string>
    <string name="must_enter2">MUST ENTER A NAME AND NUMBER</string>
</resources>