<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsFragment"
    android:background="@color/blue1">


    <TextView
        android:id="@+id/playerNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        tools:text="Player Name"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goalsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goals"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groundBallsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ground_balls"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assistsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assists"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/goalsText"
        app:layout_constraintStart_toStartOf="@+id/goalsText"
        app:layout_constraintTop_toBottomOf="@+id/goalsText" />

    <TextView
        android:id="@+id/savesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saves"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/groundBallsText"
        app:layout_constraintStart_toStartOf="@+id/groundBallsText"
        app:layout_constraintTop_toBottomOf="@+id/groundBallsText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/goalsText"
        app:layout_constraintStart_toStartOf="@+id/goalsText"
        app:layout_constraintTop_toBottomOf="@+id/goalsText">

        <Button
            android:id="@+id/minusButtonGoals"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:backgroundTint="@color/blue2" />

        <TextView
            android:id="@+id/goalsNum"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="0"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/plusButtonGoals"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/blue2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/groundBallsText"
        app:layout_constraintStart_toStartOf="@+id/groundBallsText"
        app:layout_constraintTop_toBottomOf="@+id/groundBallsText">

        <Button
            android:id="@+id/minusButtonGroundBalls"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:backgroundTint="@color/blue2" />

        <TextView
            android:id="@+id/groundBallsNum"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="0"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/plusButtonGroundBalls"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/blue2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/assistsText"
        app:layout_constraintStart_toStartOf="@+id/assistsText"
        app:layout_constraintTop_toBottomOf="@+id/assistsText">

        <Button
            android:id="@+id/minusButtonAssists"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:backgroundTint="@color/blue2" />

        <TextView
            android:id="@+id/assistsNum"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="0"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/plusButtonAssists"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/blue2" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/savesText"
        app:layout_constraintStart_toStartOf="@+id/savesText"
        app:layout_constraintTop_toBottomOf="@+id/savesText">

        <Button
            android:id="@+id/minusButtonSaves"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:backgroundTint="@color/blue2" />

        <TextView
            android:id="@+id/savesNum"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="0"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/plusButtonSaves"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/blue2" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>